--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
+    "styled-components": "^4.1.3",
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
+    "uuid": "^3.3.2",
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
@@ -122,10 +124,13 @@
       "react-app"
     ],
     "plugins": [
-      "@babel/plugin-proposal-export-default-from"
+      "@babel/plugin-proposal-export-default-from",
+      "babel-plugin-styled-components"
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.2.0"
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "babel-plugin-styled-components": "^1.10.0",
+    "redux-logger": "^3.0.6"
   }
 }
