--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "babel-plugin-styled-components": "^1.10.0",
     "react-test-renderer": "^16.8.4",
+    "react-testing-library": "^6.0.2",
     "redux-logger": "^3.0.6"
   }
 }
