--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
     "redux-saga-requests": "^0.23.1",
+    "redux-saga-requests-axios": "^0.7.6",
     "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
@@ -127,11 +129,13 @@
     ],
     "plugins": [
       "@babel/plugin-proposal-export-default-from",
-      "babel-plugin-styled-components"
+      "babel-plugin-styled-components",
+      "@babel/plugin-proposal-export-namespace-from"
     ]
   },
   "devDependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "babel-plugin-styled-components": "^1.10.0",
     "redux-logger": "^3.0.6"
   }
